packages/components/src/styles/internal/_form-components.scss
/* ... */
@mixin get-validity-message($key: "valid") {
	> db-infotext > .db-infotext,
	> .db-infotext {
		@if ($key == "valid") {
			&[data-semantic="successful"] {
				display: flex;
			}
			/* stylelint-disable-next-line at-rule-empty-line-before */
		} @else {
			&[data-semantic="critical"] {
				display: flex;
			}
		}

		&:not([data-semantic]) {
			display: none;
		}
	}
}

@mixin get-validity-color($selector, $key: "valid") {
	$variant: "successful";

	@if ($key != "valid") {
		$variant: "critical";
	}

	@if ($selector != textarea) {
		@extend %db-#{$variant}-variables;
		/* stylelint-disable-next-line at-rule-empty-line-before */
	} @else {
		// this is a workaround for the textarea scrollbar
		--db-textarea-read-only: var(--db-#{$variant}-bg-basic-level-1-default);
		--db-adaptive-bg-basic-transparent-full-default: var(
			--db-#{$variant}-bg-basic-transparent-full-default
		);
		--db-adaptive-bg-basic-transparent-semi-default: var(
			--db-#{$variant}-bg-basic-transparent-semi-default
		);
		--db-adaptive-bg-basic-transparent-hovered: var(
			--db-#{$variant}-bg-basic-transparent-hovered
		);
		--db-adaptive-bg-basic-transparent-pressed: var(
			--db-#{$variant}-bg-basic-transparent-pressed
		);
		--db-adaptive-on-bg-basic-emphasis-100-default: var(
			--db-#{$variant}-on-bg-basic-emphasis-100-default
		);
		--db-adaptive-on-bg-basic-emphasis-60-default: var(
			--db-#{$variant}-on-bg-basic-emphasis-60-default
		);
	}

	#{$selector},
	[id$="-placeholder"] {
		color: var(--db-#{$variant}-on-bg-basic-emphasis-100-default);
		caret-color: var(--db-#{$variant}-on-bg-basic-emphasis-100-default);
	}

	@include get-validity-message($key);
}

// This doesn't contain text, search and password, because they don't have an auto-validation
$input-valid-types:
	"color", "date", "datetime-local", "email", "file", "hidden", "month",
	"number", "range", "tel", "time", "url", "week";

@function get-validations($selector, $key) {
	$validations: ":required";

	@if ($selector == input) {
		// https://developer.mozilla.org/en-US/docs/Learn/Forms/Form_validation#using_built-in_form_validation
		$validations: ":required, [minlength], [maxlength], [pattern]";

		@each $type in $input-valid-types {
			$validations: $validations + ", [type=#{$type}]";
		}
		/* stylelint-disable-next-line at-rule-empty-line-before */
	} @else if($selector == textarea) {
		$validations: ":required, [minlength], [maxlength]";
	}

	$has-selectors: "&:has(#{$selector}:not([data-custom-validity]):is(#{$validations}):user-#{$key}),";

	@return string.unquote(string.slice($has-selectors, 1, -2));
}

@mixin get-validity($selector, $key: "valid") {
	$user: "";

	@if ($selector == check or $selector == switch) {
		$user: "user-";
	}

	@if ($selector == check or $selector == radio or $selector == switch) {
		$selector: input;

		&:has(
				#{$selector}:not(
						[data-custom-validity]
					):required:#{$user}#{$key}
			) {
			@content;
		}
		/* stylelint-disable-next-line at-rule-empty-line-before */
	} @else {
		@if ($selector == summary) {
			$selector: select;
		}

		#{get-validations($selector,$key)} {
			@content;
		}
	}

	// If data-custom-validity is set we overwrite the selectors above
	&:has(#{$selector}[data-custom-validity="#{$key}"]),
	&[data-custom-validity="#{$key}"] {
		@content;
	}
}

@mixin set-required-label($selector) {
	&:has(#{$selector}:required),
	&[data-required="true"] {
		&:is(label),
		> label {
			&::after {
				/* pull the asterisk to the label text by negating the flex gap */
				margin-inline-start: calc(-1 * var(--db-spacing-fixed-xs));

				@include icons.icon-content("*");
			}
		}
	}
}
/* ... */

